ItemContainer: port away from deprecated QQuickItem::(un)grabMouse

It's deprecated and no longer works without an ongoing mouse event.

See also https://invent.kde.org/qt/qt/qtdeclarative/-/blob/251fdf01a65a52414dd9183308520efbbd731567/src/quick/items/qquickitem.cpp?page=9#L8285

BUG: 470670
FIXED-IN: 6.0